# voxelcraft

./: .gitignore  LICENSE  README.md  SPEC.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.claude/agents/docs/: content-writer.md
.claude/agents/meta/: decisions.md  voxelcraft-architect.md
.claude/rules/: anti-patterns.md  code-style.md  license-compliance.md
.claude/skills/controlnet-preprocessing/: SKILL.md
.claude/skills/lora-loading/: SKILL.md
.claude/skills/memory-optimization/: SKILL.md
.claude/skills/prompt-validation/: SKILL.md
.githooks/: commit-msg
docs/: .vercelignore  ARCHITECTURE.md  DEPLOY.md  LORA_TRAINING.md  showcase.html  vercel.json
examples/: blend-fox-astronaut.json  pixelart-lighthouse.json  render3d-robot-barista.json
notebooks/: lora_training_reference.ipynb
scripts/: deploy_space.py  smoke_test.py
src/: config.py  exceptions.py  schemas.py  utils.py
src/pipelines/: controlnet_processor.py  lora_manager.py  sd_pipeline.py
tests/: conftest.py  test_config.py  test_controlnet_processor.py  test_import_layering.py  test_lora_manager.py  test_scaffold.py  test_schemas.py  test_utils.py
